--- a/codeup-design.html
+++ b/codeup-design.html
@@ -16,12 +16,21 @@
 	
 	<title>Dallas-Alejandro Codeup Design</title>
 </head>
-<body>
-	<header class="mt-3 navbar navbar-expand navbar-light bg-light">
-		<a class="navbar-brand" href="#">
+<body class="row" >
+	<header class="col-md-6 mt-3 navbar navbar-expand navbar-light bg-light">
+		<div class="container"></div>
+		<a class="col-lg-4 navbar-brand" href="#">
 			<img class="" src="assets/logo.png" width="105" height="105" alt="" loading="lazy">
-			codeup design
+			<div class="col-lg-4">codeup design</div>
 		</a>
+		<div class="col">
+			<ul class="flex-column navbar-nav">
+				<li>SERVICES</li>
+				<LI>WORK</LI>
+				<li>BLOG</li>
+				<li>CONTACT</li>
+			</ul>
+		</div>
 		
 	</header>
 
