--- a/codeup-design.html
+++ b/codeup-design.html
@@ -8,31 +8,65 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
 	<style>
 		body {
-			background-color: lightgray;
+			font-family: 'Abel', sans-serif;
+			background-color: #C8C2BC;
 		}
+		
+		
 	</style>
 	
 	<title>Dallas-Alejandro Codeup Design</title>
 </head>
-<body class="row" >
-	<header class="col-md-6 mt-3 navbar navbar-expand navbar-light bg-light">
-		<div class="container"></div>
-		<a class="col-lg-4 navbar-brand" href="#">
-			<img class="" src="assets/logo.png" width="105" height="105" alt="" loading="lazy">
-			<div class="col-lg-4">codeup design</div>
-		</a>
-		<div class="col">
-			<ul class="flex-column navbar-nav">
-				<li>SERVICES</li>
-				<LI>WORK</LI>
-				<li>BLOG</li>
-				<li>CONTACT</li>
+<body>
+	<div class="container-fluid mt-5">
+		<div class="row">
+		<nav class="col-md-12 nav justify-content-center navbar-nav navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand mx-auto" href="#">
+				<img class="d-block" src="assets/logo.png" alt="logo" width="105" height="105"><br>
+				<h1 class="mx-auto">codeup design</h1>
+			</a>
+			<ul class="nav justify-content-center">
+				<li class="nav-item mr-3">
+					<a href="#" class="nav-link">SERVICES</a>
+				</li>
+				<li class="nav-item mr-3">
+					<a href="#" class="nav-link">WORK</a>
+				</li>
+				<li class="nav-item mr-3">
+					<a href="#" class="nav-link">BLOG</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" class="nav-link">CONTACT</a>
+				</li>
 			</ul>
-		</div>
+		</nav>
 		
-	</header>
+		</div>
+	
+	</div>
+<!--FRESH APPROACH, FEEL FREE TO MODIFY-->
+
+
+
+<!--	<header class="col-md-6 mt-3 navbar navbar-expand navbar-light bg-light">-->
+<!--		<div class="container"></div>-->
+<!--		<a class="col-lg-4 navbar-brand" href="#">-->
+<!--			<img class="" src="assets/logo.png" width="105" height="105" alt="" loading="lazy">-->
+<!--			<div class="col-lg-4">codeup design</div>-->
+<!--		</a>-->
+<!--		<div class="col">-->
+<!--			<ul class="flex-column navbar-nav">-->
+<!--				<li>SERVICES</li>-->
+<!--				<li>WORK</li>-->
+<!--				<li>BLOG</li>-->
+<!--				<li>CONTACT</li>-->
+<!--			</ul>-->
+<!--		</div>-->
+<!--		-->
+<!--	</header>-->
 
 
 
@@ -43,6 +77,7 @@
 <!--		Bootstrap-->
 <!--	</a>-->
 <!--</nav>-->
+
 
 
 
