finally got the initial mobile view corrected

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -14,6 +14,17 @@
 			font-family: 'Abel', sans-serif;
 			background-color: #C8C2BC;
 		}
+		a {
+			color: black;
+		}
+		
+		.top-background {
+			height: 4.3rem;
+			width: 100%;
+			background-color: white;
+			position: absolute;
+			top: 2rem;
+		}
 		
 		
 	</style>
@@ -21,32 +32,56 @@
 	<title>Dallas-Alejandro Codeup Design</title>
 </head>
 <body>
-	<div class="container-fluid mt-5">
-		<div class="row">
-		<nav class="col-md-12 nav justify-content-center navbar-nav navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand mx-auto" href="#">
-				<img class="d-block" src="assets/logo.png" alt="logo" width="105" height="105"><br>
-				<h1 class="mx-auto">codeup design</h1>
-			</a>
-			<ul class="nav justify-content-center">
-				<li class="nav-item mr-3">
-					<a href="#" class="nav-link">SERVICES</a>
-				</li>
-				<li class="nav-item mr-3">
-					<a href="#" class="nav-link">WORK</a>
-				</li>
-				<li class="nav-item mr-3">
-					<a href="#" class="nav-link">BLOG</a>
-				</li>
-				<li class="nav-item">
-					<a href="#" class="nav-link">CONTACT</a>
-				</li>
-			</ul>
-		</nav>
-		
-		</div>
+	<div class="top-background"></div>
+	<nav class="navbar justify-content-center">
+		<a class="navbar-brand d-md-inline-block" href="#">
+			<img src="assets/logo.png" alt="logo" width="105" height="105">
+			
+		</a>
+		<h1 class="d-sm-block">codeup design</h1>
+		<ul class="navbar-nav navbar-expand">
+			<li class="nav-item">
+				<a href="#" class="nav-link mr-3">SERVICES</a>
+			</li>
+			<li class="nav-item">
+				<a href="#" class="nav-link mr-3">WORK</a>
+			</li>
+			<li class="nav-item">
+				<a href="#" class="nav-link mr-3">BLOG</a>
+			</li>
+			<li class="nav-item">
+				<a href="#" class="nav-link">CONTACT</a>
+			</li>
+		</ul>
+	</nav>
 	
-	</div>
+
+<!--	<div class="container-fluid mt-5">-->
+<!--		<div class="row">-->
+<!--		<nav class="col-md-12 nav justify-content-center navbar-nav navbar-expand-lg navbar-light bg-light">-->
+<!--			<a class="navbar-brand mx-auto" href="#">-->
+<!--				<img class="d-block" src="assets/logo.png" alt="logo" width="105" height="105"><br>-->
+<!--				<h1 class="mx-auto">codeup design</h1>-->
+<!--			</a>-->
+<!--			<ul class="nav justify-content-center">-->
+<!--				<li class="nav-item mr-3">-->
+<!--					<a href="#" class="nav-link">SERVICES</a>-->
+<!--				</li>-->
+<!--				<li class="nav-item mr-3">-->
+<!--					<a href="#" class="nav-link">WORK</a>-->
+<!--				</li>-->
+<!--				<li class="nav-item mr-3">-->
+<!--					<a href="#" class="nav-link">BLOG</a>-->
+<!--				</li>-->
+<!--				<li class="nav-item">-->
+<!--					<a href="#" class="nav-link">CONTACT</a>-->
+<!--				</li>-->
+<!--			</ul>-->
+<!--		</nav>-->
+<!--		-->
+<!--		</div>-->
+<!--	-->
+<!--	</div>-->
 <!--FRESH APPROACH, FEEL FREE TO MODIFY-->
 
 
