--- a/codeup-design.html
+++ b/codeup-design.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 	<style>
 		body {
 			font-family: 'Abel', sans-serif;
@@ -25,6 +26,10 @@
 			position: absolute;
 			top: 2rem;
 		}
+		.jumbotron {
+			background-color: #C8C2BC;
+			font-family: 'Bebas Neue', cursive;
+		}
 		
 		
 	</style>
@@ -32,11 +37,11 @@
 	<title>Dallas-Alejandro Codeup Design</title>
 </head>
 <body>
+<!-- Decided to try a diffrent approach and place a background div for the white strip up top and it worked perfectly	-->
 	<div class="top-background"></div>
 	<nav class="navbar justify-content-center">
 		<a class="navbar-brand d-md-inline-block" href="#">
 			<img src="assets/logo.png" alt="logo" width="105" height="105">
-			
 		</a>
 		<h1 class="d-sm-block">codeup design</h1>
 		<ul class="navbar-nav navbar-expand">
@@ -54,6 +59,18 @@
 			</li>
 		</ul>
 	</nav>
+
+<!--JUMBOTRON SECTION-->
+	<div class="jumbotron jumbotron-fluid text-center">
+		<h1>VISUAL DESIGN &<br>
+			WEB DEVELOPMENT
+		</h1><br>
+		<h2>FROM PARK CITY, UTAH</h2>
+	</div>
+
+
+	
+	
 	
 
 <!--	<div class="container-fluid mt-5">-->
