finished circles for mobile view

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -13,7 +13,7 @@
 	<style>
 		body {
 			font-family: 'Abel', sans-serif;
-			background-color: #C8C2BC;
+			background-color: #eae8e6;
 		}
 		a {
 			color: black;
@@ -27,8 +27,35 @@
 			top: 2rem;
 		}
 		.jumbotron {
-			background-color: #C8C2BC;
+			background-color: #eae8e6;
 			font-family: 'Bebas Neue', cursive;
+		}
+		.circle {
+			font-family: 'Bebas Neue', cursive;
+			width: 115px;
+			line-height: 105px;
+			border: .5rem solid white;
+			border-radius: 50%;
+			text-align: center;
+		}
+		.circle-text {
+			display: inline-block;
+			vertical-align: middle;
+			line-height: normal;
+		}
+		.red-circle {
+			background-color: rgba(255, 0, 0, 0.69);
+			
+			
+		}
+		.orange-circle {
+			background-color: rgba(255, 165, 0, 0.66);
+		}
+		.green-circle {
+			background-color: rgba(0, 128, 0, 0.51);
+		}
+		.blue-circle {
+			background-color: #228d84;
 		}
 		
 		
@@ -69,11 +96,21 @@
 	</div>
 
 <!--design, develop, support, host CIRCLES-->
+	<div class="container">
+		<div class="row justify-content-center">
+			<div class="circle red-circle m-2"><span class="circle-text">DESIGN</span></div>
+			<div class="circle orange-circle m-2"><span class="circle-text">DEVELOP</span></div>
+		</div>
+		<div class="row justify-content-center">
+			<div class="circle green-circle m-2"><span class="circle-text">SUPPORT</span></div>
+			<div class="circle blue-circle m-2"><span class="circle-text">HOST</span></div>
+		</div>
+	</div>
+	
 
 
-	
-	
-	
+
+
 
 <!--	<div class="container-fluid mt-5">-->
 <!--		<div class="row">-->
