--- a/codeup-design.html
+++ b/codeup-design.html
@@ -10,70 +10,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-	<style>
-		body {
-			font-family: 'Abel', sans-serif;
-			background-color: #eae8e6;
-		}
-		a {
-			color: black;
-		}
-		
-		.top-background {
-			height: 4.3rem;
-			width: 100%;
-			background-color: white;
-			position: absolute;
-			top: 2rem;
-		}
-		.jumbotron {
-			background-color: #eae8e6;
-			font-family: 'Bebas Neue', cursive;
-		}
-		.circle {
-			font-family: 'Bebas Neue', cursive;
-			width: 121px;
-			line-height: 105px;
-			border: .5rem solid white;
-			border-radius: 50%;
-			text-align: center;
-		}
-		.small-circles {
-			font-family: 'Bebas Neue', cursive;
-			font-size: 10px;
-			width: 1rem;
-			height: 1rem;
-			border: 2px solid transparent;
-			border-radius: 50%;
-			text-align: center;
-			padding: 8px;
-		}
-		.circle-text {
-			display: inline-block;
-			vertical-align: middle;
-			line-height: normal;
-		}
-		.red-circle {
-			background-color: rgba(255, 0, 0, 0.69);
-		}
-		.small-red-circle {
-			/*font-size: 10px;*/
-		}
-		.orange-circle {
-			background-color: rgba(255, 165, 0, 0.66);
-		}
-		.green-circle {
-			background-color: rgba(0, 128, 0, 0.51);
-		}
-		.blue-circle {
-			background-color: #228d84;
-		}
-		.pic-caption {
-		
-		}
-		
-	</style>
-	
+	<link rel="stylesheet" href="css/codeup-design.css">
 	<title>Dallas-Alejandro Codeup Design</title>
 </head>
 <body>
