Small-circle-Text center

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -58,13 +58,13 @@
 	</div>
 
 <!-- footer for mobile view	-->
-	<footer class="d-flex flex-column justify-content-end align-items-center mt-5 mx-auto">
+	<section class="d-flex flex-column justify-content-end align-items-center mt-5 mx-auto">
 		<header>
 			<h5>SELECTED WORK</h5>
 		</header>
 		<div class="mx-4">
 			<picture>
-				<img src="assets/images/apple-ipad.jpg" alt="apple-ipad" width="250" height="175">
+				<img class="ml-2" src="assets/images/apple-ipad.jpg" alt="apple-ipad" width="250" height="175">
 			</picture>
 			<div class="container">
 				<div class="row">
@@ -73,16 +73,16 @@
 					</div>
 					<div class="col-6 d-flex ml-auto mt-1">
 						<div class="small-circles small-red-circle red-circle m-1">
-							D
+							<span class="small-circle-text">D</span>
 						</div>
 						<div class="small-circles orange-circle m-1">
-							D
+							<span class="small-circle-text">D</span>
 						</div>
 						<div class="small-circles green-circle m-1">
-							S
+							<span class="small-circle-text">S</span>
 						</div>
 						<div class="small-circles blue-circle m-1">
-							H
+							<span class="small-circle-text">H</span>
 						</div>
 					</div>
 				</div>
@@ -91,7 +91,7 @@
 		
 	
 		
-	</footer>
+	</section>
 	
 
 
