--- a/codeup-design.html
+++ b/codeup-design.html
@@ -58,20 +58,20 @@
 	</div>
 
 <!-- footer for mobile view	-->
-	<section class="d-flex flex-column justify-content-end align-items-center mt-5 mx-auto">
+	<section class="d-flex flex-column align-items-center mt-5 mx-auto">
 		<header>
 			<h5>SELECTED WORK</h5>
 		</header>
-		<div class="mx-4">
+		<div class="ml-4">
 			<picture>
 				<img class="ml-2" src="assets/images/apple-ipad.jpg" alt="apple-ipad" width="250" height="175">
 			</picture>
 			<div class="container">
-				<div class="row">
-					<div class="col-6 mr-auto mt-1 ">
-						<h5 class="pic-caption">FEATURED PROJECT</h5>
+				<div class="row mr-2">
+					<div class="col-7 mr-auto mt-1 pt-1">
+						<h6 class="pic-caption">FEATURED PROJECT</h6>
 					</div>
-					<div class="col-6 d-flex ml-auto mt-1">
+					<div class="col-5 d-flex ml-auto mt-1">
 						<div class="small-circles small-red-circle red-circle m-1">
 							<span class="small-circle-text">D</span>
 						</div>
