--- a/codeup-design.html
+++ b/codeup-design.html
@@ -64,7 +64,14 @@
 </nav>
 
 <!--JUMBOTRON SECTION-->
-<div class="jumbotron jumbotron-fluid text-center">
+<!--tablet view jumbotron-->
+<div class="jumbotron jumbotron-fluid tablet-view-jumbotron text-center">
+	<h1>VISUAL DESIGN & WEB DEVELOPMENT</h1><br>
+	<h2>FROM PARK CITY, UTAH</h2>
+</div>
+
+<!--Mobile view jumbotron-->
+<div class="jumbotron jumbotron-fluid text-center mobile-view-jumbotron">
 	<h1>VISUAL DESIGN &<br>
 		WEB DEVELOPMENT
 	</h1><br>
