adjusted top logo

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -44,7 +44,7 @@
 <!--Mobile view nav below-->
 <nav class="navbar justify-content-center mobile-view-nav">
 	<a class="navbar-brand d-md-inline-block" href="#">
-		<img src="assets/logo.png" alt="logo" width="105" height="105">
+		<img class="ml-4" src="assets/logo.png" alt="logo" width="105" height="105">
 	</a>
 	<h1 class="d-sm-block">codeup design</h1>
 	<ul class="navbar-nav navbar-expand">
