added tablet view circles

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -79,7 +79,15 @@
 </div>
 
 <!--design, develop, support, host CIRCLES-->
-<div class="container">
+<!--circles-->
+<div class="tablet-view-circles container">
+	<div class="tablet-circle red-circle"></div>
+	<div class="tablet-circle orange-circle"></div>
+	<div class="tablet-circle green-circle"></div>
+	<div class="tablet-circle blue-circle"></div>
+</div>
+<!--circles mobile-->
+<div class="mobile-view-circles container">
 	<div class="row justify-content-center">
 		<div class="circle red-circle m-2"><span class="circle-text">DESIGN</span></div>
 		<div class="circle orange-circle m-2"><span class="circle-text">DEVELOP</span></div>
