completed tablet view circles

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -79,12 +79,12 @@
 </div>
 
 <!--design, develop, support, host CIRCLES-->
-<!--circles-->
+<!--circles tablet view-->
 <div class="tablet-view-circles container">
-	<div class="tablet-circle red-circle"></div>
-	<div class="tablet-circle orange-circle"></div>
-	<div class="tablet-circle green-circle"></div>
-	<div class="tablet-circle blue-circle"></div>
+	<div class="tablet-circle red-circle m-2">DESIGN</div>
+	<div class="tablet-circle orange-circle m-2">DEVELOP</div>
+	<div class="tablet-circle green-circle m-2">SUPPORT</div>
+	<div class="tablet-circle blue-circle m-2">HOST</div>
 </div>
 <!--circles mobile-->
 <div class="mobile-view-circles container">
