--- a/codeup-design.html
+++ b/codeup-design.html
@@ -58,65 +58,69 @@
 	</div>
 
 <!-- footer for mobile view	-->
-	<section class="d-flex flex-column align-items-center mt-5 mx-auto">
-		<header>
-			<h5>SELECTED WORK</h5>
-		</header>
-		<div class="ml-4">
-			<picture>
-				<img class="ml-2" src="assets/images/apple-ipad.jpg" alt="apple-ipad" width="250" height="175">
-			</picture>
-			<div class="container">
-				<div class="row mr-2">
-					<div class="col-7 mr-auto mt-1 pt-1">
-						<h6 class="pic-caption">FEATURED PROJECT</h6>
-					</div>
-					<div class="col-5 d-flex ml-auto mt-1">
-						<div class="small-circles small-red-circle red-circle m-1">
-							<span class="small-circle-text">D</span>
+<section class="d-flex flex-column align-items-center mt-5 mx-auto">
+	<div class="row">
+	<div class="col">
+			<header>
+				<h5>SELECTED WORK</h5>
+			</header>
+			<div class="ml-4">
+				<picture>
+					<img class="ml-2" src="assets/images/apple-ipad.jpg" alt="apple-ipad" width="250" height="175">
+				</picture>
+				<div class="container">
+					<div class="row mr-2">
+						<div class="col-7 mr-auto mt-1 pt-1">
+							<h6 class="pic-caption">FEATURED PROJECT</h6>
 						</div>
-						<div class="small-circles orange-circle m-1">
-							<span class="small-circle-text">D</span>
-						</div>
-						<div class="small-circles green-circle m-1">
-							<span class="small-circle-text">S</span>
-						</div>
-						<div class="small-circles blue-circle m-1">
-							<span class="small-circle-text">H</span>
+						<div class="col-5 d-flex ml-auto mt-1">
+							<div class="small-circles small-red-circle red-circle m-1">
+								<span class="small-circle-text">D</span>
+							</div>
+							<div class="small-circles orange-circle m-1">
+								<span class="small-circle-text">D</span>
+							</div>
+							<div class="small-circles green-circle m-1">
+								<span class="small-circle-text">S</span>
+							</div>
+							<div class="small-circles blue-circle m-1">
+								<span class="small-circle-text">H</span>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+			<div class="ml-4">
+				<picture>
+					<img class="ml-2" src="assets/images/macbook.jpg" alt="macbook" width="250" height="175">
+				</picture>
+				<div class="container">
+					<div class="row mr-2">
+						<div class="col-7 mr-auto mt-1 pt-1">
+							<h6 class="pic-caption">FEATURED PROJECT</h6>
+						</div>
+						<div class="col-5 d-flex ml-auto mt-1">
+							<div class="small-circles small-red-circle red-circle m-1">
+								<span class="small-circle-text">D</span>
+							</div>
+							<div class="small-circles orange-circle m-1">
+								<span class="small-circle-text">D</span>
+							</div>
+							<div class="small-circles green-circle m-1">
+								<span class="small-circle-text">S</span>
+							</div>
+							<div class="small-circles blue-circle m-1">
+								<span class="small-circle-text">H</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+	</div>
+	<div class="col">
 		<div class="ml-4">
 			<picture>
 				<img class="ml-2" src="assets/images/man.jpg" alt="man" width="250" height="175">
-			</picture>
-			<div class="container">
-				<div class="row mr-2">
-					<div class="col-7 mr-auto mt-1 pt-1">
-						<h6 class="pic-caption">FEATURED PROJECT</h6>
-					</div>
-					<div class="col-5 d-flex ml-auto mt-1">
-						<div class="small-circles small-red-circle red-circle m-1">
-							<span class="small-circle-text">D</span>
-						</div>
-						<div class="small-circles orange-circle m-1">
-							<span class="small-circle-text">D</span>
-						</div>
-						<div class="small-circles green-circle m-1">
-							<span class="small-circle-text">S</span>
-						</div>
-						<div class="small-circles blue-circle m-1">
-							<span class="small-circle-text">H</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="ml-4">
-			<picture>
-				<img class="ml-2" src="assets/images/macbook.jpg" alt="macbook" width="250" height="175">
 			</picture>
 			<div class="container">
 				<div class="row mr-2">
@@ -166,6 +170,8 @@
 				</div>
 			</div>
 		</div>
+	</div>
+	</div>
 
 
 
