adjusted css so tablet views didn't show up in mobile

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -71,7 +71,7 @@
 </div>
 
 <!--Mobile view jumbotron-->
-<div class="jumbotron jumbotron-fluid text-center mobile-view-jumbotron">
+<div class="jumbotron jumbotron-fluid text-center mobile-view-jumbotron mb-1">
 	<h1>VISUAL DESIGN &<br>
 		WEB DEVELOPMENT
 	</h1><br>
