Tablet view update

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -17,7 +17,7 @@
 <!-- Decided to try a diffrent approach and place a background div for the white strip up top and it worked perfectly	-->
 <div class="top-background"></div>
 <!--Tablet view nav below-->
-<div class="tablet-view-nav mt-2">
+<div class="mb-5 tablet-view-nav mt-2">
 	<div class="navbar tablet-container">
 		<div>
 			<a href="#">SERVICES</a>
@@ -97,100 +97,23 @@
 		<div class="circle blue-circle m-2"><span class="circle-text">HOST</span></div>
 	</div>
 </div>
+<hr class="divider">
 
 <!-- footer for mobile view	-->
-<section class="d-flex flex-column align-items-center mt-5 mx-auto">
-<<<<<<< HEAD
-	<div class="row">
-	<div class="col">
-			<header>
-				<h5>SELECTED WORK</h5>
-			</header>
-			<div class="ml-4">
-				<picture>
-					<img class="ml-2" src="assets/images/apple-ipad.jpg" alt="apple-ipad" width="250" height="175">
-				</picture>
-				<div class="container">
-					<div class="row mr-2">
-						<div class="col-7 mr-auto mt-1 pt-1">
-							<h6 class="pic-caption">FEATURED PROJECT</h6>
-						</div>
-						<div class="col-5 d-flex ml-auto mt-1">
-							<div class="small-circles small-red-circle red-circle m-1">
-								<span class="small-circle-text">D</span>
-							</div>
-							<div class="small-circles orange-circle m-1">
-								<span class="small-circle-text">D</span>
-							</div>
-							<div class="small-circles green-circle m-1">
-								<span class="small-circle-text">S</span>
-							</div>
-							<div class="small-circles blue-circle m-1">
-								<span class="small-circle-text">H</span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="ml-4">
-				<picture>
-					<img class="ml-2" src="assets/images/macbook.jpg" alt="macbook" width="250" height="175">
-				</picture>
-				<div class="container">
-					<div class="row mr-2">
-						<div class="col-7 mr-auto mt-1 pt-1">
-							<h6 class="pic-caption">FEATURED PROJECT</h6>
-=======
-	<header>
+<section class="flex-column align-items-center mt-5 mx-auto">
+	<header class="container mb-5 d-lg-flex text-center justify-content-lg-start">
 		<h5>SELECTED WORK</h5>
 	</header>
-	<div class="ml-4">
-		<picture>
-			<img class="ml-2" src="assets/images/apple-ipad.jpg" alt="apple-ipad" width="250" height="175">
-		</picture>
-		<div class="container">
-			<div class="row mr-2">
-				<div class="col-7 mr-auto mt-1 pt-1">
-					<h6 class="pic-caption">FEATURED PROJECT</h6>
-				</div>
-				<div class="col-5 d-flex ml-auto mt-1">
-					<div class="small-circles small-red-circle red-circle m-1">
-						<span class="small-circle-text">D</span>
-					</div>
-					<div class="small-circles orange-circle m-1">
-						<span class="small-circle-text">D</span>
-					</div>
-					<div class="small-circles green-circle m-1">
-						<span class="small-circle-text">S</span>
-					</div>
-					<div class="small-circles blue-circle m-1">
-						<span class="small-circle-text">H</span>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!--changes by jd above and changes by alejandro below-->
-		<div class="ml-4">
-			<picture>
-				<img class="ml-2" src="assets/images/man.jpg" alt="man" width="250" height="175">
-			</picture>
-			<div class="container">
-				<div class="row mr-2">
-					<div class="col-7 mr-auto mt-1 pt-1">
-						<h6 class="pic-caption">FEATURED PROJECT</h6>
-					</div>
-					<div class="col-5 d-flex ml-auto mt-1">
-						<div class="small-circles small-red-circle red-circle m-1">
-							<span class="small-circle-text">D</span>
-						</div>
-						<div class="small-circles orange-circle m-1">
-							<span class="small-circle-text">D</span>
-						</div>
-						<div class="small-circles green-circle m-1">
-							<span class="small-circle-text">S</span>
->>>>>>> 7032bf4800e61aa3bfd7322d7c7e2cc98497bb0a
+	<div class="row">
+		<div class="container col-md-6">
+			<div class=" featured-project ml-4">
+				<picture>
+					<img width="320" class="ml-2" src="assets/images/apple-ipad.jpg" alt="apple-ipad" width="250" height="175">
+				</picture>
+				<div class="container">
+					<div class="row mr-2">
+						<div class="col-7 mr-auto mt-1 pt-1">
+							<h6 class="pic-caption">FEATURED PROJECT</h6>
 						</div>
 						<div class="col-5 d-flex ml-auto mt-1">
 							<div class="small-circles small-red-circle red-circle m-1">
@@ -209,63 +132,92 @@
 					</div>
 				</div>
 			</div>
-	</div>
-	<div class="col">
-		<div class="ml-4">
-			<picture>
-				<img class="ml-2" src="assets/images/man.jpg" alt="man" width="250" height="175">
-			</picture>
-			<div class="container">
-				<div class="row mr-2">
-					<div class="col-7 mr-auto mt-1 pt-1">
-						<h6 class="pic-caption">FEATURED PROJECT</h6>
-					</div>
-					<div class="col-5 d-flex ml-auto mt-1">
-						<div class="small-circles small-red-circle red-circle m-1">
-							<span class="small-circle-text">D</span>
+			<div class="featured-project ml-4">
+				<picture>
+					<img width=320 class="ml-2" src="assets/images/macbook.jpg" alt="mac" width="250" height="175">
+				</picture>
+				<div class="container">
+					<div class="row mr-2">
+						<div class="col-7 mr-auto mt-1 pt-1">
+							<h6 class="pic-caption">FEATURED PROJECT</h6>
 						</div>
-						<div class="small-circles orange-circle m-1">
-							<span class="small-circle-text">D</span>
-						</div>
-						<div class="small-circles green-circle m-1">
-							<span class="small-circle-text">S</span>
-						</div>
-						<div class="small-circles blue-circle m-1">
-							<span class="small-circle-text">H</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="ml-4">
-			<picture>
-				<img class="ml-2" src="assets/images/security.jpg" alt="security" width="250" height="175">
-			</picture>
-			<div class="container">
-				<div class="row mr-2">
-					<div class="col-7 mr-auto mt-1 pt-1">
-						<h6 class="pic-caption">FEATURED PROJECT</h6>
-					</div>
-					<div class="col-5 d-flex ml-auto mt-1">
-						<div class="small-circles small-red-circle red-circle m-1">
-							<span class="small-circle-text">D</span>
-						</div>
-						<div class="small-circles orange-circle m-1">
-							<span class="small-circle-text">D</span>
-						</div>
-						<div class="small-circles green-circle m-1">
-							<span class="small-circle-text">S</span>
-						</div>
-						<div class="small-circles blue-circle m-1">
-							<span class="small-circle-text">H</span>
+						<div class="col-5 d-flex ml-auto mt-1">
+							<div class="small-circles small-red-circle red-circle m-1">
+								<span class="small-circle-text">D</span>
+							</div>
+							<div class="small-circles orange-circle m-1">
+								<span class="small-circle-text">D</span>
+							</div>
+							<div class="small-circles green-circle m-1">
+								<span class="small-circle-text">S</span>
+							</div>
+							<div class="small-circles blue-circle m-1">
+								<span class="small-circle-text">H</span>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-</div>
+		<div class="container col-md-6">
+			<div class="featured-project ml-4">
+				<picture>
+					<img width=320 class="ml-2" src="assets/images/man.jpg" alt="man" width="250" height="175">
+				</picture>
+				<div class="container">
+					<div class="row mr-2">
+						<div class="col-7 mr-auto mt-1 pt-1">
+							<h6 class="pic-caption">FEATURED PROJECT</h6>
+						</div>
+						<div class="col-5 d-flex ml-auto mt-1">
+							<div class="small-circles small-red-circle red-circle m-1">
+								<span class="small-circle-text">D</span>
+							</div>
+							<div class="small-circles orange-circle m-1">
+								<span class="small-circle-text">D</span>
+							</div>
+							<div class="small-circles green-circle m-1">
+								<span class="small-circle-text">S</span>
+							</div>
+							<div class="small-circles blue-circle m-1">
+								<span class="small-circle-text">H</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="featured-project ml-4">
+				<picture>
+					<img width="320" class="ml-2" src="assets/images/security.jpg" alt="security" width="250" height="175">
+				</picture>
+				<div class="container">
+					<div class="row mr-2">
+						<div class="col-7 mr-auto mt-1 pt-1">
+							<h6 class="pic-caption">FEATURED PROJECT</h6>
+						</div>
+						<div class="col-5 d-flex ml-auto mt-1">
+							<div class="small-circles small-red-circle red-circle m-1">
+								<span class="small-circle-text">D</span>
+							</div>
+							<div class="small-circles orange-circle m-1">
+								<span class="small-circle-text">D</span>
+							</div>
+							<div class="small-circles green-circle m-1">
+								<span class="small-circle-text">S</span>
+							</div>
+							<div class="small-circles blue-circle m-1">
+								<span class="small-circle-text">H</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--changes by jd above and changes by alejandro below-->
 
+	</div>
+
+</section>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
