tablet view done

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -71,7 +71,7 @@
 </div>
 
 <!--Mobile view jumbotron-->
-<div class="jumbotron jumbotron-fluid text-center mobile-view-jumbotron mb-1">
+<div class="jumbotron jumbotron-fluid text-center mobile-view-jumbotron">
 	<h1>VISUAL DESIGN &<br>
 		WEB DEVELOPMENT
 	</h1><br>
@@ -80,7 +80,7 @@
 
 <!--design, develop, support, host CIRCLES-->
 <!--circles tablet view-->
-<div class="tablet-view-circles container">
+<div class="tablet-view-circles container mt-5">
 	<div class="tablet-circle red-circle m-2">DESIGN</div>
 	<div class="tablet-circle orange-circle m-2">DEVELOP</div>
 	<div class="tablet-circle green-circle m-2">SUPPORT</div>
@@ -97,6 +97,7 @@
 		<div class="circle blue-circle m-2"><span class="circle-text">HOST</span></div>
 	</div>
 </div>
+<br>
 <hr class="divider">
 
 <!-- footer for mobile view	-->
@@ -106,7 +107,7 @@
 	</header>
 	<div class="row">
 		<div class="container col-md-6">
-			<div class=" featured-project ml-4">
+			<div class="justify-content-around featured-project ml-4">
 				<picture>
 					<img width="320" class="ml-2" src="assets/images/apple-ipad.jpg" alt="apple-ipad" width="250" height="175">
 				</picture>
