--- a/codeup-design.html
+++ b/codeup-design.html
@@ -16,7 +16,7 @@
 <body>
 <!-- Decided to try a diffrent approach and place a background div for the white strip up top and it worked perfectly	-->
 <div class="top-background"></div>
-<!--Tablet view nav below-->
+<!--Tablet view nav below-->/
 <div class="mb-5 tablet-view-nav mt-2">
 	<div class="navbar tablet-container">
 		<div>
@@ -106,7 +106,7 @@
 		<h5>SELECTED WORK</h5>
 	</header>
 	<div class="row">
-		<div class="container col-md-6">
+		<div class="container col-md-6 col-lg-4">
 			<div class="justify-content-around featured-project ml-4">
 				<picture>
 					<img width="320" class="ml-2" src="assets/images/apple-ipad.jpg" alt="apple-ipad" width="250" height="175">
@@ -160,7 +160,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="container col-md-6">
+		<div class="container col-md-6 col-lg-4">
 			<div class="featured-project ml-4">
 				<picture>
 					<img width=320 class="ml-2" src="assets/images/man.jpg" alt="man" width="250" height="175">
@@ -214,9 +214,24 @@
 				</div>
 			</div>
 		</div>
-		<!--changes by jd above and changes by alejandro below-->
+		<div class="container col-lg-4">
+			<div class="row">
+				<img width="100" height="100" src="assets/images/mobile-phone.jpg" alt="cell">
+			</div>
+			<div class="row">
+				<img width="100" height="100" src="assets/images/head.jpg" alt="c-face">
+			</div>
+			<div class="row">
+				<img width="100" height="100" src="assets/images/google-search.jpg" alt="google">
+			</div>
+			<div class="row">
+
+			</div>
+
+		</div>
 
 	</div>
+<!--		&lt;!&ndash;changes by jd above and changes by alejandro below- -->
 
 </section>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
