--- a/codeup-design.html
+++ b/codeup-design.html
@@ -8,15 +8,40 @@
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Abel&family=Anton&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/codeup-design.css">
 	<title>Dallas-Alejandro Codeup Design</title>
 </head>
 <body>
 <!-- Decided to try a diffrent approach and place a background div for the white strip up top and it worked perfectly	-->
 <div class="top-background"></div>
-<!--Tablet view nav below-->/
+<!--desktop nav-->
+<nav class="desktop-nav-view ">
+	<div class="sub-dt-nav">
+		<div class="nav-brand">
+			<img src="assets/logo.png" height="105" width="105" alt="logo">
+		</div>
+		<div>
+			<h2 class="desktop-h2">codeup design</h2>
+		</div>
+	</div>
+	<div class="desktop-nav-items">
+		<div class="dt-nav-item-1">
+			<a href="">SERVICES</a>
+		</div>
+		<div class="dt-nav-item-1">
+			<a href="">WORK</a>
+		</div>
+		<div class="dt-nav-item-1">
+			<a href="">BLOG</a>
+		</div>
+		<div class="dt-nav-item-1">
+			<a href="">CONTACT</a>
+		</div>
+	</div>
+</nav>
+
+<!--Tablet view nav below-->
 <div class="mb-5 tablet-view-nav mt-2">
 	<div class="navbar tablet-container">
 		<div>
@@ -106,10 +131,10 @@
 		<h5>SELECTED WORK</h5>
 	</header>
 	<div class="row">
-		<div class="container col-md-6 col-lg-4">
+		<div class="last-col-container container col-md-6 col-lg-4">
 			<div class="justify-content-around featured-project ml-4">
 				<picture>
-					<img width="320" class="ml-2" src="assets/images/apple-ipad.jpg" alt="apple-ipad" width="250" height="175">
+					<img width="320" class="desktop-view ml-2" src="assets/images/apple-ipad.jpg" alt="apple-ipad" width="250" height="175">
 				</picture>
 				<div class="container">
 					<div class="row mr-2">
@@ -135,7 +160,7 @@
 			</div>
 			<div class="featured-project ml-4">
 				<picture>
-					<img width=320 class="ml-2" src="assets/images/macbook.jpg" alt="mac" width="250" height="175">
+					<img width=320 class="desktop-view ml-2" src="assets/images/macbook.jpg" alt="mac" width="250" height="175">
 				</picture>
 				<div class="container">
 					<div class="row mr-2">
@@ -160,10 +185,10 @@
 				</div>
 			</div>
 		</div>
-		<div class="container col-md-6 col-lg-4">
+		<div class="last-col-container container col-md-6 col-lg-4">
 			<div class="featured-project ml-4">
 				<picture>
-					<img width=320 class="ml-2" src="assets/images/man.jpg" alt="man" width="250" height="175">
+					<img width=320 class="desktop-view ml-2" src="assets/images/man.jpg" alt="man" width="250" height="175">
 				</picture>
 				<div class="container">
 					<div class="row mr-2">
@@ -189,7 +214,7 @@
 			</div>
 			<div class="featured-project ml-4">
 				<picture>
-					<img width="320" class="ml-2" src="assets/images/security.jpg" alt="security" width="250" height="175">
+					<img width="320" class="desktop-view ml-2" src="assets/images/security.jpg" alt="security" width="250" height="175">
 				</picture>
 				<div class="container">
 					<div class="row mr-2">
@@ -214,18 +239,25 @@
 				</div>
 			</div>
 		</div>
-		<div class="container col-lg-4">
-			<div class="row">
-				<img width="100" height="100" src="assets/images/mobile-phone.jpg" alt="cell">
+		<div class="last-dt-container last-col-container container col-lg-4">
+			<div class="last-col-row row m-2">
+				<img class="m-2" width="75" height="75" src="assets/images/mobile-phone.jpg" alt="cell">
+				<span class="last-col-text font-weight-bolder">THE ADMIN BAR AND <br> ABSOLUTE POSITIONING</span>
 			</div>
-			<div class="row">
-				<img width="100" height="100" src="assets/images/head.jpg" alt="c-face">
+			<div class="last-col-row row m-2">
+				<img class="m-2" width="75" height="75" src="assets/images/head.jpg" alt="c-face">
+				<span class="last-col-text">NIBBLER AWESOME <br> WEBSITE TESTING</span>
 			</div>
-			<div class="row">
-				<img width="100" height="100" src="assets/images/google-search.jpg" alt="google">
+			<div class="last-col-row row m-2">
+				<img class="m-2" width="75" height="75" src="assets/images/google-search.jpg" alt="google">
+				<span class="last-col-text">HOW TO GET GOOGLE TO <br> LIKE YOU</span>
 			</div>
-			<div class="row">
-
+			<div class="last-col-row row m-2">
+				<div class="twitter-logo">
+					<i class="bi bi-twitter mr-1"></i>
+					LAST TWEET
+				</div>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi ducimus eaque error et exercitationem itaque numquam ullam. Alias architecto beatae doloremque ducimus harum ipsum laudantium magnam nam numquam perspiciatis.
 			</div>
 
 		</div>
