desktop view updated with selected and the last

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -123,12 +123,22 @@
 	</div>
 </div>
 <br>
+
 <hr class="divider">
+<!--desktop h5-->
+<div class="container d-flex desktop-h5">
+	<div id="selected-work">
+		<h5>SELECTED WORK</h5>
+	</div>
+	<div id="the-last">
+		<h5>THE LAST</h5>
+	</div>
+</div>
 
 <!-- footer for mobile view	-->
-<section class="flex-column align-items-center mt-5 mx-auto">
-	<header class="container mb-5 d-lg-flex text-center justify-content-lg-start">
-		<h5>SELECTED WORK</h5>
+<section class="flex-column align-items-center mt-2 mx-auto">
+	<header  class="container mb-5 d-lg-flex text-center justify-content-lg-start">
+		<h5 id="h5-remove-dt">SELECTED WORK</h5>
 	</header>
 	<div class="row">
 		<div class="last-col-container container col-md-6 col-lg-4">
