Rework with Shanshan to correct conflict

--- a/codeup-design.html
+++ b/codeup-design.html
@@ -136,16 +136,14 @@
 </div>
 
 <!-- footer for mobile view	-->
-<section class="flex-column align-items-center mt-2 mx-auto">
+<section class="container mt-2">
 	<header  class="container mb-5 d-lg-flex text-center justify-content-lg-start">
 		<h5 id="h5-remove-dt">SELECTED WORK</h5>
 	</header>
 	<div class="row">
-		<div class="last-col-container container col-md-6 col-lg-4">
-			<div class="justify-content-around featured-project ml-4">
-				<picture>
-					<img width="320" class="desktop-view ml-2" src="assets/images/apple-ipad.jpg" alt="apple-ipad" width="250" height="175">
-				</picture>
+		<div class="row col-md-8">
+			<div class="featured-project col-12 col-sm-6">
+					<img class="desktop-view " src="assets/images/apple-ipad.jpg" alt="apple-ipad">
 				<div class="container">
 					<div class="row mr-2">
 						<div class="col-7 mr-auto mt-1 pt-1">
@@ -168,10 +166,56 @@
 					</div>
 				</div>
 			</div>
-			<div class="featured-project ml-4">
-				<picture>
-					<img width=320 class="desktop-view ml-2" src="assets/images/macbook.jpg" alt="mac" width="250" height="175">
-				</picture>
+			<div class="featured-project col-12 col-sm-6">
+					<img class="desktop-view" src="assets/images/macbook.jpg" alt="mac">
+				<div class="container">
+					<div class="row mr-2">
+						<div class="col-7 mr-auto mt-1 pt-1">
+							<h6 class="pic-caption">FEATURED PROJECT</h6>
+						</div>
+						<div class="col-5 d-flex ml-auto mt-1">
+							<div class="small-circles small-red-circle red-circle m-1">
+								<span class="small-circle-text">D</span>
+							</div>
+							<div class="small-circles orange-circle m-1">
+								<span class="small-circle-text">D</span>
+							</div>
+							<div class="small-circles green-circle m-1">
+								<span class="small-circle-text">S</span>
+							</div>
+							<div class="small-circles blue-circle m-1">
+								<span class="small-circle-text">H</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="featured-project col-12 col-sm-6">
+					<img class="desktop-view" src="assets/images/man.jpg" alt="man">
+				<div class="container">
+					<div class="row mr-2">
+						<div class="col-7 mr-auto mt-1 pt-1">
+							<h6 class="pic-caption">FEATURED PROJECT</h6>
+						</div>
+						<div class="col-5 d-flex ml-auto mt-1">
+							<div class="small-circles small-red-circle red-circle m-1">
+								<span class="small-circle-text">D</span>
+							</div>
+							<div class="small-circles orange-circle m-1">
+								<span class="small-circle-text">D</span>
+							</div>
+							<div class="small-circles green-circle m-1">
+								<span class="small-circle-text">S</span>
+							</div>
+							<div class="small-circles blue-circle m-1">
+								<span class="small-circle-text">H</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="featured-project col-12 col-sm-6">
+					<img class="desktop-view" src="assets/images/security.jpg" alt="security">
 				<div class="container">
 					<div class="row mr-2">
 						<div class="col-7 mr-auto mt-1 pt-1">
@@ -195,61 +239,8 @@
 				</div>
 			</div>
 		</div>
-		<div class="last-col-container container col-md-6 col-lg-4">
-			<div class="featured-project ml-4">
-				<picture>
-					<img width=320 class="desktop-view ml-2" src="assets/images/man.jpg" alt="man" width="250" height="175">
-				</picture>
-				<div class="container">
-					<div class="row mr-2">
-						<div class="col-7 mr-auto mt-1 pt-1">
-							<h6 class="pic-caption">FEATURED PROJECT</h6>
-						</div>
-						<div class="col-5 d-flex ml-auto mt-1">
-							<div class="small-circles small-red-circle red-circle m-1">
-								<span class="small-circle-text">D</span>
-							</div>
-							<div class="small-circles orange-circle m-1">
-								<span class="small-circle-text">D</span>
-							</div>
-							<div class="small-circles green-circle m-1">
-								<span class="small-circle-text">S</span>
-							</div>
-							<div class="small-circles blue-circle m-1">
-								<span class="small-circle-text">H</span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="featured-project ml-4">
-				<picture>
-					<img width="320" class="desktop-view ml-2" src="assets/images/security.jpg" alt="security" width="250" height="175">
-				</picture>
-				<div class="container">
-					<div class="row mr-2">
-						<div class="col-7 mr-auto mt-1 pt-1">
-							<h6 class="pic-caption">FEATURED PROJECT</h6>
-						</div>
-						<div class="col-5 d-flex ml-auto mt-1">
-							<div class="small-circles small-red-circle red-circle m-1">
-								<span class="small-circle-text">D</span>
-							</div>
-							<div class="small-circles orange-circle m-1">
-								<span class="small-circle-text">D</span>
-							</div>
-							<div class="small-circles green-circle m-1">
-								<span class="small-circle-text">S</span>
-							</div>
-							<div class="small-circles blue-circle m-1">
-								<span class="small-circle-text">H</span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="last-dt-container last-col-container container col-lg-4">
+
+		<div class="d-none d-md-flex col-md-4">
 			<div class="last-col-row row m-2">
 				<img class="m-2" width="75" height="75" src="assets/images/mobile-phone.jpg" alt="cell">
 				<span class="last-col-text font-weight-bolder">THE ADMIN BAR AND <br> ABSOLUTE POSITIONING</span>
